--- a/README.org
+++ b/README.org
@@ -1,3 +1,10 @@
 * Arch Linux Setup
 
 ** TODO Documenting & More functions
+
+** DONE Screen brightness can't be controlled
+CLOSED: [2024-10-23 Wed 01:48]
+
+** TODO Asus
+[[https://asus-linux.org][Asus Linux site]]
+
